visualizar otros documentos, tomografias, resonancias, otros, ventana de antedecedentes, sql

--- a/ProyectoConsultorio/ProyectoConsultorio.vbproj
+++ b/ProyectoConsultorio/ProyectoConsultorio.vbproj
@@ -126,6 +126,7 @@
     <Compile Include="nuevoPaciente.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Paciente.vb" />
     <Compile Include="Pacientes.Designer.vb">
       <DependentUpon>Pacientes.vb</DependentUpon>
     </Compile>
